nivasa-macros/tests/trybuild/validation_dto_tuple_struct.stderr
error: `#[derive(Dto)]` only supports structs with named fields
 --> tests/trybuild/validation_dto_tuple_struct.rs:4:1
  |
4 | struct InvalidTupleDto(
  | ^^^^^^
