nivasa-macros/tests/trybuild/validation_dto_tuple_struct.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct InvalidTupleDto(
    #[is_email] String,
);

fn main() {}
